<resources>
    <string name="app_name">FinderPet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FinderPet</string>
    <string name="nav_header_subtitle">finderpetapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_map">Mapas</string>
    <string name="menu_setting">Ajustes</string>
    <string name="menu_advert">Anuncios</string>
    <string name="menu_donate">Donar</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_account">Mi cuenta</string>
    <string name="menu_info">Información</string>
    <string name="menu_help">Ayuda</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="facebook_app_id" translatable="false">320939478933651</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb320939478933651</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="load_image">Seleccionar Imagen</string>
    <string name="description">Descripción</string>
    <string name="menu">Menú</string>
    <string name="agregar">Agregar</string>
    <string name="detail_pet">Detalle de la Mascota</string>
    <string name="name_pet">Nombre de la mascota:</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="hint_search">Buscar</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="login_google">"Continuar con Google       "</string>
    <string name="login">Ingresar</string>
    <string name="next_main">Continuar</string>
    <string name="welcome">Bienvenido</string>
    <string-array name="especie">
        <item></item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Otro</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirme contraseña</string>
    <string name="save_register">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="register_new_user">Registrar nuevo usuario</string>
    <string name="pet_type">Tipo de mascota</string>
    <string name="location">Dirección / Ubicación:</string>
    <string name="email_contact">Correo de contacto:</string>
    <string name="phone">Teléfono:</string>
    <string name="observations">Observaciones:</string>
    <string name="load">Cargando...</string>
    <string name="report_new_pet_found">REPORTAR MASCOTA ENCONTRADA</string>
    <string name="login_facebook">Iniciar Sesión con Facebook</string>
    <string name="dog">Perro</string>
    <string name="cat">Gato</string>
    <string name="other">Otro</string>
    <string name="description_observations">Descripción / Observaciones</string>
    <string name="new_pet_found">Nueva mascota encontrada</string>
    <string name="add_img_pet">Puedes agregar hasta 3 imágenes de la mascota</string>
    <string name="new_pet_lost">Nueva mascota perdida</string>
    <string name="new_pet_adoption">Nueva mascota en adopción</string>
    <string name="create_new_account">Crear una cuenta</string>
    <string name="no_account">¿No tienes una cuenta?</string>
    <string name="or_login_with">o inicia con...</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="title_init_session">Inicia sesión con tu cuenta</string>
    <string name="create_new_record">Creando nuevo registro...</string>
    <string name="registry_new_user">Registrar nuevo usuario</string>
    <string name="oops">Oops!</string>
    <string name="no_connection_alert">No hay conexión a internet. Para continuar revisa si tus datos móviles están encendidos o si estás conectado a una red wifi</string>
    <string name="exit">Salir</string>
    <string name="let_continue">Continuar</string>
    <string name="select_type_pet">Escoge el tipo de mascota:</string>
    <string name="email">Correo electrónico</string>
    <string name="account_information">Información de mi cuenta</string>
    <string name="communicate">Communicate</string>
    <string name="detail_info_pet">Información de la mascota</string>
    <string name="map_location_pet">Ubicación de la mascota</string>
    <string name="banner_inferior_ad_unit_id">Ads by Google</string>
    <string name="confirm_location">Confirmar ubicación o zona</string>
    <string name="location_not_found">Tu ubicación no ha sido encontrada. Verifica los permisos de ubicación en Ajustes.</string>
    <string name="msg_close_app">Cerrando aplicación...</string>
    <string name="msg_come_back_soon">¡Vuelve pronto!</string>
    <string name="select_category">Selecciona una categoría</string>
    <string name="report_new_pet_lost">REPORTAR MASCOTA PERDIDA</string>
    <string name="report_new_pet_adopted">AGREGA MASCOTA PARA ADOPTAR</string>
    <string name="field_without_info">Sin Información</string>
    <string name="age">Edad</string>
    <string name="breed">Raza</string>
    <string name="sterilized">Esterilizado</string>
    <string name="vaccines">Vacunas</string>
    <string name="time_post">Tiempo de publicación</string>
    <string name="pet_age">Edad</string>
    <string name="date">Fecha</string>
    <string name="user_manual">Descargar manual de uso</string>
    <string name="tutorial">Tutorial rápido</string>
    <string name="video_tutorial">Ver video tutorial</string>
    <string name="report_problem">Informar de un problema</string>
    <string name="label_data_policy">Política de datos</string>
    <string name="link_data_policy">&lt;u>Política de datos&lt;/u></string>
    <string name="link_terms_use">&lt;u>Condiciones de uso&lt;/u></string>
    <string name="label_terms_use">Condiciones de uso</string>
    <string name="about_app">Acerca de la aplicación</string>
    <string name="developer_info">Información de los desarrolladores</string>
    <string name="title_advert">Título del anuncio</string>
    <string name="description_advert">Descripción del anuncio</string>
    <string name="phone_advert">Teléfono del anuncio</string>
    <string name="url_advert">Página del anuncio</string>
    <string name="call_advert">Llamar al anunciante</string>
    <string name="msg_conf_initial">Antes de comenzar debes elegir el País, la ciudad y el idioma de tu preferencia. Esta configuración la puedes cambiar en cualquier momento ingresando a la sección de Ajustes.</string>
    <string name="initial_config">Configuración inicial</string>
    <string name="accept">Aceptar</string>
    <string name="more">Más...</string>
    <string name="donate_for_help">Con tu aporte nos ayudas a mantener operativa nuestra aplicación y así poder beneficiar a miles de personas que buscan su mascota.</string>
    <string name="donate">donar</string>
    <string name="method_to_donate">Métodos para donar</string>
    <string name="title_activity_container_tutorial">ContainerTutorialActivity</string>
    <string name="tutorial_settings">Cuando inicias la aplicación por primera vez, debes hacer la configuración inicial de tu país, tu ciudad y tu idioma de preferencia para brindarte una mejor experiencia con nuestros servicios.</string>
    <string name="frequents_questions">Preguntas frecuentes</string>
    <string name="question_1">¿Cómo hacer una publicación nueva de una mascota encontrada, perdida o en adopción?</string>
    <string name="question_2">¿Cómo puedo cambiar el rango de visualización de las vistas?</string>
    <string name="question_3">¿Cómo puedo eliminar una publicación que hice?</string>
    <string name="answer_1">Debes dirigirte a la pantalla de inicio, luego debes escoger entre las 3 opciones que tenemos para publicar, puede ser encontrados, Perdidos o en Adopción, te aparecerá la lista de las mascotas con tu elección y en la parte inferior encontraras on botón que te permite agregar una nueva publicación, Te aparece un formulario que debes diligenciar y luego das clic en Guardar.</string>
    <string name="answer_2">Debes dirigirte a la sección de Ajustes del menú desplegable, luego ingresar en la sección de Radio de búsqueda y en la lista escoger el radio de búsqueda que prefieras. Recuerda que entre más alto sea el rango de visualización, más resultados verás en las 3 listas de reportes.</string>
    <string name="answer_3">Si quieres eliminar una publicación porque tiene algún error en los datos ingresados, debes dirigirte al boton flotante que está en la parte posterior derecha de la publicación que hiciste y luego aceptar la eliminación.</string>
    <string name="send">Enviar</string>
    <string name="content_description_media">Imagen o multimedia</string>
    <string name="version_app">Versión 1.0.1</string>
    <string name="main_menu">Menú Principal</string>
    <string name="country">País</string>
    <string name="choose_country">Elige el país donde vives</string>
    <string name="city_state">Ciudad o Estado</string>
    <string name="choose_city_state">Elige una ciudad o un estado</string>
    <string name="application_language">Idioma de la aplicación</string>
    <string name="choose_language">Elige el idioma de tu preferencia</string>
    <string name="configure_ads">Configurar anuncios</string>
    <string name="activate_ads_main">Activa o desactiva los anuncios del menú pricipal.</string>
    <string name="push_notifications">Notificaciones Push</string>
    <string name="account_settings">Configuración de la cuenta</string>
    <string name="update_data_delete_account">Actualiza tus datos o elimina tu cuenta</string>
    <string name="update_app">Actualizar la Aplicación</string>
    <string name="automatically_update_wifi">Actualizar automáticamente si está conectado a una red wifi</string>
    <string name="pref_location">UBICACIÓN</string>
    <string name="pref_ads">ANUNCIOS</string>
    <string name="pref_language">IDIOMA</string>
    <string name="pref_notifications">NOTIFICACIONES</string>
    <string name="pref_account">CUENTA</string>
    <string name="pref_updates">ACTUALIZACIONES</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="email_create_account">Ingrese el correo electrónico con el que creó su cuenta.</string>
    <string name="pet_state">Estado de la mascota</string>
    <string name="about_app_msg">Finderpet es una herramienta que busca solucionar la gran problemática que se presenta en el mundo con la pérdida de las mascotas. También ofrece una solucíon para aquellas personas o fundaciones que buscan un nuevo hogar para mascotas desprotegidas.</string>
    <string name="copyright_msg">Todos los derechos reservados FinderPet  © 2020</string>
</resources>