<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_location">
        <ListPreference
            android:key="country"
            android:title="@string/country"
            android:summary="@string/choose_country"
            android:entries="@array/country"
            android:entryValues="@array/country"
            android:icon="@drawable/ic_outline_location_32" />
        <ListPreference
            android:key="city_state"
            android:title="@string/city_state"
            android:summary="@string/choose_city_state"
            android:entries="@array/Colombia"
            android:entryValues="@array/Colombia"
            android:icon="@drawable/ic_my_location_32"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_language">
        <ListPreference
            android:key="language"
            android:title="@string/application_language"
            android:summary="@string/choose_language"
            android:entries="@array/language"
            android:entryValues="@array/language"
            android:icon="@drawable/ic_language_32"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_ads">
        <SwitchPreferenceCompat
            android:key="adverts"
            android:title="@string/configure_ads"
            android:summary="@string/activate_ads_main"
            android:icon="@drawable/ic_outline_event_32"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_notifications">
        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/push_notifications"
            android:summary="@string/pause_notificacions"
            android:icon="@drawable/ic_outline_notifications_active_32"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_account">
        <Preference
            android:key="account"
            android:title="@string/account_settings"
            android:summary="@string/update_data_delete_account"
            android:icon="@drawable/ic_outline_account_32"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_updates">
        <SwitchPreferenceCompat
            android:key="update"
            android:title="@string/update_app"
            android:summary="@string/automatically_update_wifi"
            android:icon="@drawable/ic_update_32"/>
    </PreferenceCategory>

</PreferenceScreen>