<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_password"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_letra"
        android:contentDescription="@string/content_description_media" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_create_account"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.FinderPet.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:boxStrokeWidth="1dp"
        android:textColorHint="@color/secondary_text">
        <EditText
            android:id="@+id/emailRecover"
            android:drawableRight="@drawable/ic_email_24"
            android:drawablePadding="8dp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendRecover"
            style="@style/Widget.FinderPet.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:icon="@drawable/ic_pass_24"
            android:textSize="12sp"
            android:text="@string/send" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelRecover"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/btnSendRecover"
            android:layout_toLeftOf="@id/btnSendRecover"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>