<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.help.HelpFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUserManual"
        style="@style/Widget.FinderPet.ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textAllCaps="false"
        android:text="@string/user_manual" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTutorial"
        style="@style/Widget.FinderPet.ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textAllCaps="false"
        android:text="@string/tutorial" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPqr"
        style="@style/Widget.FinderPet.ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textAllCaps="false"
        android:text="@string/frequents_questions" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSeeVideoTutorial"
        style="@style/Widget.FinderPet.ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textAllCaps="false"
        android:text="@string/video_tutorial" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInfoProblem"
        style="@style/Widget.FinderPet.ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textAllCaps="false"
        android:text="@string/report_problem" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>