<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Fragments.tutorialMainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:text="@string/main_menu" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:tint="@color/colorBlack"
        android:src="@drawable/ic_home_screen_128"
        android:contentDescription="@string/content_description_media" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:text="@string/tutorial_settings" />

</LinearLayout>