<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutAppFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_splash_new2"
                android:contentDescription="@string/content_description_media" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="11sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="50dp"
                android:textAlignment="center"
                android:text="@string/version_app"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="80dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:text="@string/about_app_msg"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textSize="10sp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright_msg"/>

</FrameLayout>