<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAdopted"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_margin="4dp"
                android:src="@drawable/sin_imagen"
                android:contentDescription="@string/content_description_media" />

            <LinearLayout
                android:id="@+id/layout_descrip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameAdopted"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/primary_text"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AgeAdopted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_age" />

                <TextView
                    android:id="@+id/phoneContactAdopted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/timePostAdopted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/back_adopted"
                    android:paddingRight="4dp"
                    android:paddingLeft="4dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:text="@string/time_post" />
            </LinearLayout>

            <ImageView
                android:id="@+id/markAdopted"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_adopted"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/content_description_media" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>